[package]
name = "ahash_macro"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/krakow10/ahash_macro"
license = "MIT OR Apache-2.0"
description = "A macro which invokes ahash on a string literal."
authors = ["Rhys Lloyd <krakow20@gmail.com>"]
keywords = ["hash", "ahash", "const", "macro"]

[lib]
proc_macro=true

[dependencies]
ahash = { version = "0.8.11", features = ["no-rng"], default-features = false }
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.100"
